--- a/main.css
+++ b/main.css
@@ -120,76 +120,51 @@ ul > div {
 }
 
 .paragraph-container {
-  width: 100%;
+  width-left: 100%;
   margin: 0;
 }
 
-.title-1 {
+.title {
   letter-spacing: 4px;
   font-family: 'Oswald', sans-serif;
 }
 
-.title-2 {
+
+.paragraph-left {
+    float: left;
+    width: 30%;
+    text-align: justify;
+    font-size: 7px;
+    padding-left: 132px;
+    padding-top: 15px;
+    font-family: 'Oxygen', sans-serif;
+    line-height: 220%;
+    color: #6C7A80;
+}
+
+.paragraph-right {
+    float: right;
+    width: 30%;
+    text-align: justify;
+    font-size: 7px;
+    padding-right: 133px;
+    padding-left: 35px;
+    padding-top: 15px;
+    font-family: 'Oxygen', sans-serif;
+    line-height: 220%;
+    color: #6C7A80;
+}
+
+.title-support {
   letter-spacing: 4px;
   font-family: 'Oswald', sans-serif;
+  padding-top: 10px;
 }
 
-.title-3 {
+.title-plan {
   letter-spacing: 4px;
   font-family: 'Oswald', sans-serif;
-}
-
-.title-4 {
-  letter-spacing: 4px;
-  font-family: 'Oswald', sans-serif;
-}
-
-.paragraph-one {
-  float: left;
-  width: 33%;
-  text-align: justify;
-  font-size: 6px;
-  padding-left: 120px;
-  padding-top: 15px;
-  font-family: 'Oxygen', sans-serif;
-  line-height: 220%;
-  color: #6C7A80;
-}
-
-.paragraph-two {
-  float: left;
-  width: 31%;
-  text-align: justify;
-  font-size: 6px;
-  padding-left: 35px;
-  padding-top: 15px;
-  font-family: 'Oxygen', sans-serif;
-  line-height: 220%;
-  color: #6C7A80;
-}
-
-.paragraph-three {
-  float: left;
-  width: 33%;
-  text-align: justify;
-  font-size: 6px;
-  padding-left: 120px;
-  padding-top: 15px;
-  font-family: 'Oxygen', sans-serif;
-  line-height: 220%;
-  color: #6C7A80;
-}
-
-.paragraph-four {
-  float: left;
-  width: 31%;
-  text-align: justify;
-  font-size: 6px;
-  padding-left: 35px;
-  padding-top: 15px;
-  font-family: 'Oxygen', sans-serif;
-  line-height: 220%;
-  color: #6C7A80;
+  padding-top: 10px;
 }
 
 footer {
