--- a/main.css
+++ b/main.css
@@ -165,11 +165,12 @@ ul > div {
     width: 33%;
     text-align: justify;
     font-size: 7px;
-    padding-left: 120px;
+    padding-left: 130px;
     padding-top: 30px;
     font-family: 'Oxygen', sans-serif;
     line-height: 220%;
     color: #6C7A80;
+    padding-bottom: 10px;
 }
 
 .paragraph-right {
@@ -177,12 +178,13 @@ ul > div {
     width: 33%;
     text-align: justify;
     font-size: 7px;
-    padding-right: 110px;
-    padding-left: 20px;
+    padding-right: 130px;
+    padding-left: 10px;
     padding-top: 30px;
     font-family: 'Oxygen', sans-serif;
     line-height: 220%;
     color: #6C7A80;
+    padding-bottom: 10px;
 }
 
 .title-support {
