--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@ ul.tabs > li:hover {
 
 .header-hero {
   background:
-  url(https://lh3.googleusercontent.com/HwK_PcGaxlYPirU6HbB1ftj5qYfH-tQizshmUijJ_loOYbuJluCPhePA6EYPzkBjtByJhn7JIVQ5gNE=w1728-h900-rw);
+  url(file://localhost/Users/justinrobinson/Desktop/Images/background.jpg);
   background-size: cover;
   width: 100%;
   height: 216;
