--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@ ul.tabs > li:hover {
 
 .header-hero {
   background:
-  url(https://lh4.googleusercontent.com/YaAkFIUOP_lG52vFIXKbhKuR0-UCMPsL6lFmL09sPHNauyCZ8PARgz4UdVTPsuHODKgPkkKm4whHryg=w1698-h966-rw);
+  url(images/background.jpg);
   background-size: cover;
   width: 100%;
   height: 216;
